--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,11 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "hanyfreestyle/laravelshoppingcart": "^1.0",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-medialibrary": "^11.12",
+        "spatie/laravel-permission": "^6.17"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
