--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "astrotomic/laravel-translatable": "^11.16",
+        "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.3",
         "hanyfreestyle/laravelshoppingcart": "^1.0",
         "laravel/framework": "^11.0",
